@@ -27,7 +27,11 @@ FS hfsplus::get_filesystem_support( )
 	
 	fs .filesystem = GParted::FS_HFSPLUS ;
 	
-	fs .read = GParted::FS::LIBPARTED ; //provided by libparted
+	fs .read = GParted::FS::LIBPARTED ; 
+	fs .shrink = GParted::FS::LIBPARTED ; 
+	
+	if ( ! Glib::find_program_in_path( "dd" ) .empty() )
+		fs .copy = GParted::FS::EXTERNAL ;
 	
 	return fs ;
 }
@@ -52,7 +56,20 @@ bool hfsplus::Copy( const Glib::ustring & src_part_path,
 		    const Glib::ustring & dest_part_path,
 		    std::vector<OperationDetails> & operation_details )
 {
-	return true ;
+	operation_details .push_back( OperationDetails( 
+				String::ucompose( _("copy contents of %1 to %2"), src_part_path, dest_part_path ) ) ) ;
+
+	if ( ! execute_command( "dd bs=8192 if=" + src_part_path + " of=" + dest_part_path,
+				 operation_details .back() .sub_details ) )
+	{
+		operation_details .back() .status = OperationDetails::SUCCES ;
+		return true ;	
+	}
+	else
+	{
+		operation_details .back() .status = OperationDetails::ERROR ;
+		return false ;
+	}
 }
 
 bool hfsplus::Check_Repair( const Partition & partition, std::vector<OperationDetails> & operation_details )
