@@ -1,4 +1,10 @@
 2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* src/GParted_Core.cc: modified warning
+	* src/hfsplus.cc: added support for shrinking and copying hfs+
+	  filesystems
+
+2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Dialog_Partition_Resize_Move.cc,
 	  src/GParted_Core.cc,
